# rust-sdk

./: .gitignore  .release-plz.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  book.toml  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  deny.yml  mdbook.yml  publish.yml
examples/: agent.rs  client.rs
examples/migration/: Cargo.toml  agent_legacy.rs  agent_sacp.rs  agent_with_callbacks_sacp.rs  client_legacy.rs  client_sacp.rs
md/: SUMMARY.md  conductor.md  design.md  http-transport.md  introduction.md  mcp-bridge.md  migration_v0.11.x.md  migration_v2.0.md  protocol-v2.md  protocol-versioning.md  protocol-versions.md  protocol.md  proxying-acp.md  request-cancellation.md  testy.md  trace-viewer.md  transport-architecture.md
src/: lib.rs  rpc.rs  rpc_tests.rs  stream_broadcast.rs
src/agent-client-protocol/: CHANGELOG.md  Cargo.toml  MIGRATION_v0.11.x.md  README.md
src/agent-client-protocol-conductor/: CHANGELOG.md  Cargo.toml  README.md
src/agent-client-protocol-conductor/src/: conductor.rs  debug_logger.rs  lib.rs  main.rs  mcp_bridge.rs  snoop.rs  trace.rs
src/agent-client-protocol-conductor/src/conductor/: mcp_bridge.rs
src/agent-client-protocol-conductor/src/conductor/mcp_bridge/: actor.rs  http.rs  stdio.rs
src/agent-client-protocol-conductor/tests/: arrow_proxy_eliza.rs  empty_conductor_eliza.rs  initialization_sequence.rs  mcp-integration.rs  mcp_over_acp_polyfill.rs  mcp_server_handler_chain.rs  meta_propagation.rs  nested_arrow_proxy.rs  nested_conductor.rs  request_cancellation.rs  scoped_mcp_server.rs  standalone_mcp_server.rs  test_mcp_connection_context.rs  test_mcp_tool_output_types.rs  test_session_id_in_mcp_tools.rs  test_tool_enable_disable.rs  test_tool_fn.rs  test_util.rs  trace_client_mcp_server.rs  trace_generation.rs  trace_mcp_tool_call.rs  trace_snapshot.rs
src/agent-client-protocol-conductor/tests/mcp_integration/: proxy.rs
src/agent-client-protocol-cookbook/: CHANGELOG.md  Cargo.toml
src/agent-client-protocol-cookbook/src/: lib.rs
src/agent-client-protocol-core/: CHANGELOG.md  Cargo.toml  README.md
src/agent-client-protocol-core/examples/: simple_agent.rs  yolo_one_shot_client.rs
src/agent-client-protocol-core/src/: capabilities.rs  component.rs  cookbook.rs  jsonrpc.rs  lib.rs  role.rs  session.rs  typed.rs  util.rs
src/agent-client-protocol-core/src/concepts/: callbacks.rs  connections.rs  error_handling.rs  mod.rs  ordering.rs  peers.rs  proxies.rs  sessions.rs
src/agent-client-protocol-core/src/jsonrpc/: handlers.rs  incoming_actor.rs
src/agent-client-protocol-core/src/mcp_server/: builder.rs  connect.rs  mod.rs  server.rs  tool.rs
src/agent-client-protocol-core/src/role/: acp.rs
src/agent-client-protocol-core/src/schema/: proxy_protocol.rs
src/agent-client-protocol-core/src/util/: typed.rs
src/agent-client-protocol-core/tests/: derive_macros.rs  jsonrpc_advanced.rs  jsonrpc_connection_builder.rs  jsonrpc_edge_cases.rs  jsonrpc_error_handling.rs  jsonrpc_hello.rs  match_dispatch.rs
src/agent-client-protocol-derive/: CHANGELOG.md  Cargo.toml
src/agent-client-protocol-derive/src/: lib.rs
src/agent-client-protocol-http/: CHANGELOG.md  Cargo.toml  README.md
src/agent-client-protocol-http/src/: client.rs  connection.rs  http_server.rs  lib.rs  protocol.rs  server.rs  websocket_server.rs
src/agent-client-protocol-polyfill/: CHANGELOG.md  Cargo.toml
src/agent-client-protocol-polyfill/src/: lib.rs
src/agent-client-protocol-polyfill/src/mcp_over_acp/: actor.rs  http.rs  mod.rs  stdio.rs
src/agent-client-protocol-rmcp/: CHANGELOG.md  Cargo.toml  README.md
src/agent-client-protocol-rmcp/examples/: with_mcp_server.rs
src/agent-client-protocol-rmcp/src/: builder.rs  lib.rs  responder.rs
src/agent-client-protocol-test/: CHANGELOG.md  Cargo.toml
src/agent-client-protocol-test/examples/: arrow_proxy.rs
src/agent-client-protocol-test/src/: arrow_proxy.rs  lib.rs  test_binaries.rs  testy.rs
src/agent-client-protocol-test/tests/: testy.rs
src/agent-client-protocol-tokio/: CHANGELOG.md  Cargo.toml  README.md
src/agent-client-protocol-tokio/src/: acp_agent.rs  lib.rs
src/agent-client-protocol-tokio/tests/: debug_logging.rs
src/agent-client-protocol-trace-viewer/: CHANGELOG.md  Cargo.toml
src/agent-client-protocol/examples/: agent.rs  client.rs  simple_agent.rs  yolo_one_shot_client.rs
src/agent-client-protocol/src/: acp_agent.rs  agent.rs  capabilities.rs  client.rs  component.rs  jsonrpc.rs  lib.rs  role.rs  rpc.rs  rpc_tests.rs  session.rs  stdio.rs  stream_broadcast.rs  util.rs
src/agent-client-protocol/src/concepts/: callbacks.rs  cancellation.rs  connections.rs  error_handling.rs  mod.rs  ordering.rs  peers.rs  proxies.rs  sessions.rs
src/agent-client-protocol/src/jsonrpc/: close.rs  dynamic_handler.rs  handlers.rs  incoming_actor.rs  outgoing_actor.rs  protocol_compat.rs  transport_actor.rs
src/agent-client-protocol/src/mcp_server/: active_session.rs  builder.rs  connect.rs  context.rs  mod.rs  server.rs  tool_fn.rs
src/agent-client-protocol/src/role/: acp.rs
src/agent-client-protocol/src/schema/: enum_impls.rs  mcp.rs  methods.rs  mod.rs  protocol_level.rs  proxy_protocol.rs  v2_compat.rs  v2_impls.rs
src/agent-client-protocol/src/schema/agent_to_client/: notifications.rs  requests.rs
src/agent-client-protocol/src/schema/client_to_agent/: notifications.rs  requests.rs
src/agent-client-protocol/src/util/: typed.rs
src/agent-client-protocol/tests/: derive_macros.rs  jsonrpc_advanced.rs  jsonrpc_batch.rs  jsonrpc_edge_cases.rs  jsonrpc_error_handling.rs  jsonrpc_request_cancellation.rs  jsonrpc_transport_close.rs  jsonrpc_unhandled_messages.rs  match_dispatch.rs  meta_propagation.rs  protocol_v2.rs  protocol_v2_compat.rs  schema_elicitation.rs  schema_session_delete.rs  session_ordering.rs
src/elizacp/: Cargo.toml
src/sacp-conductor/: Cargo.toml
src/sacp-proxy/: Cargo.toml
src/sacp-rmcp/: Cargo.toml
src/sacp-tee/: Cargo.toml  README.md
src/yopo/: CHANGELOG.md  Cargo.toml  README.md
src/yopo/src/: lib.rs  main.rs
(+35 files in other folders)
