[workspace]
members = [
    "src/agent-client-protocol",
    "src/agent-client-protocol-derive",
    # Keep polyfill and rmcp before conductor: release-plz currently ignores versioned
    # dev-dependency edges, but cargo publish still validates them.
    "src/agent-client-protocol-polyfill",
    "src/agent-client-protocol-rmcp",
    "src/agent-client-protocol-conductor",
    "src/agent-client-protocol-http",
    "src/agent-client-protocol-test",
    "src/agent-client-protocol-trace-viewer",
    "src/yopo",
    # Keep cookbook last: release-plz currently ignores versioned
    # dev-dependency edges, but cargo publish still validates them.
    "src/agent-client-protocol-cookbook",
]
resolver = "3"

[workspace.package]
authors = ["Zed <hi@zed.dev>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/agentclientprotocol/rust-sdk"
homepage = "https://github.com/agentclientprotocol/rust-sdk"

[workspace.dependencies]
# Internal crates
agent-client-protocol = { path = "src/agent-client-protocol", version = "0.14.0" }
agent-client-protocol-conductor = { path = "src/agent-client-protocol-conductor", version = "0.14.0" }
agent-client-protocol-derive = { path = "src/agent-client-protocol-derive", version = "0.14.0" }
agent-client-protocol-http = { path = "src/agent-client-protocol-http", version = "0.1.0" }
agent-client-protocol-polyfill = { path = "src/agent-client-protocol-polyfill", version = "0.14.0" }
agent-client-protocol-rmcp = { path = "src/agent-client-protocol-rmcp", version = "0.14.0" }
agent-client-protocol-test = { path = "src/agent-client-protocol-test" }
agent-client-protocol-trace-viewer = { path = "src/agent-client-protocol-trace-viewer", version = "0.14.0" }
yopo = { package = "agent-client-protocol-yopo", path = "src/yopo" }

# Protocol
agent-client-protocol-schema = { version = "=0.14.0", features = ["tracing"] }

# Core async runtime
tokio = { version = "1.52", default-features = false }
tokio-util = { version = "0.7", features = ["compat"] }
async-tungstenite = { version = "0.34.1", default-features = false, features = ["tokio-rustls-webpki-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
schemars = { version = "1.0", features = ["derive"] }

# UUID generation
uuid = { version = "1.18", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# MCP SDK
rmcp = { version = "1.2.0", features = ["server", "transport-io", "schemars"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
eventsource-stream = "0.2"
url = "2.5"
async-process = "2"
async-stream = "0.3.6"
blocking = "1"
chrono = "0.4"
futures = "0.3.32"
futures-concurrency = "7.6.3"
open = "5"
rustc-hash = "2.1.1"
shell-words = "1.1"
strip-ansi-escapes = "0.2"
tower-http = "0.6"


# Proc macros
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

# Testing
expect-test = "1.5"
regex = "1.12.2"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let-underscore = "warn"
missing_debug_implementations = "warn"
# missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
type_complexity = "allow"
wildcard_imports = "allow"
