[package]
name = "agent-client-protocol-conductor"
version = "1.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Conductor for orchestrating Agent Client Protocol proxy chains"
keywords = ["acp", "agent", "conductor", "ai"]
categories = ["development-tools"]

[[bin]]
name = "agent-client-protocol-conductor"
path = "src/main.rs"

[features]
default = []

[dependencies]
agent-client-protocol = { workspace = true }
agent-client-protocol-trace-viewer.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
strip-ansi-escapes.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
agent-client-protocol = { workspace = true, features = ["unstable_mcp_over_acp"] }
agent-client-protocol-rmcp.workspace = true
agent-client-protocol-test.workspace = true
yopo.workspace = true
expect-test.workspace = true
regex.workspace = true
rmcp = { workspace = true, features = ["client", "server", "transport-io", "transport-child-process"] }
schemars.workspace = true
agent-client-protocol-polyfill.workspace = true

[lints]
workspace = true
