[package]
name = "agent-client-protocol-cookbook"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cookbook of common patterns for building ACP components"
keywords = ["acp", "agent", "proxy", "mcp", "cookbook"]
categories = ["development-tools"]

[dependencies]
agent-client-protocol-conductor = { path = "../agent-client-protocol-conductor" }
agent-client-protocol-core = { path = "../agent-client-protocol-core" }
agent-client-protocol-rmcp = { path = "../agent-client-protocol-rmcp" }
agent-client-protocol-tokio = { path = "../agent-client-protocol-tokio" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
