[package]
name = "agent-client-protocol-cookbook"
version = "1.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cookbook of common patterns for building ACP components"
keywords = ["acp", "agent", "proxy", "mcp", "cookbook"]
categories = ["development-tools"]

[dependencies]

[dev-dependencies]
agent-client-protocol.workspace = true
agent-client-protocol-rmcp.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
