[package]
name = "agent-client-protocol-derive"
version = "1.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Derive macros for Agent Client Protocol JSON-RPC traits"

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
