[package]
name = "agent-client-protocol-http"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP and WebSocket transport for the Agent Client Protocol (ACP)"
keywords = ["acp", "agent", "protocol", "http", "websocket"]
categories = ["development-tools", "web-programming::http-server"]

[features]
default = []
unstable_cancel_request = ["agent-client-protocol/unstable_cancel_request"]

[dependencies]
agent-client-protocol.workspace = true

futures.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tracing.workspace = true
thiserror.workspace = true

# Server
axum = { workspace = true, features = ["ws", "macros"] }
tower-http = { workspace = true, features = ["cors"] }
async-stream = { workspace = true }
uuid = { workspace = true }

# Client
reqwest = { workspace = true, features = ["stream"] }
eventsource-stream = { workspace = true }
url = { workspace = true }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
agent-client-protocol-test.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
