[package]
name = "agent-client-protocol-polyfill"
version = "1.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Polyfill proxies for Agent Client Protocol backward compatibility"
keywords = ["acp", "agent", "mcp", "polyfill"]
categories = ["development-tools"]

[dependencies]
agent-client-protocol = { workspace = true, features = ["unstable_mcp_over_acp"] }
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
thiserror = "2.0"
tokio = { workspace = true, features = ["net"] }
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
