[package]
name = "agent-client-protocol-rmcp"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "rmcp integration for Agent Client Protocol MCP servers"
keywords = ["acp", "agent", "proxy", "mcp", "rmcp"]
categories = ["development-tools"]

[dependencies]
agent-client-protocol.workspace = true
futures.workspace = true
futures-concurrency.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
tokio-util.workspace = true

[dev-dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
