[package]
name = "agent-client-protocol-test"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Test utilities and mock implementations for the Agent Client Protocol"
publish = false

[features]
default = ["unstable"]
unstable = ["agent-client-protocol/unstable"]

[[bin]]
name = "mcp-echo-server"
path = "src/bin/mcp_echo_server.rs"

[[bin]]
name = "testy"
path = "src/bin/testy.rs"

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
http = "1.4.2"
rmcp = { workspace = true, features = ["server", "client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
