[package]
name = "agent-client-protocol-tokio"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tokio-based utilities for the Agent Client Protocol"
keywords = ["acp", "agent", "protocol", "ai", "tokio"]
categories = ["development-tools"]

[dependencies]
agent-client-protocol-core.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
agent-client-protocol-test.workspace = true
expect-test.workspace = true
tokio.workspace = true

[lints]
workspace = true
