[package]
name = "agent-client-protocol"
authors = ["Zed <hi@zed.dev>"]
version = "0.8.1"
edition = "2024"
license = "Apache-2.0"
description = "A protocol for standardizing communication between code editors and AI coding agents"
repository = "https://github.com/agentclientprotocol/rust-sdk"
homepage = "https://github.com/agentclientprotocol/rust-sdk"
documentation = "https://docs.rs/agent-client-protocol"
readme = "README.md"
keywords = ["agent", "client", "protocol", "ai", "editor"]
categories = ["development-tools", "api-bindings"]

[features]
unstable = ["agent-client-protocol-schema/unstable"]

[dependencies]
agent-client-protocol-schema.workspace = true
anyhow.workspace = true
async-broadcast.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
env_logger.workspace = true
futures-util.workspace = true
piper.workspace = true
pretty_assertions.workspace = true
rustyline.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
