[package]
name = "agent-client-protocol-yopo"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "YOPO (You Only Prompt Once) - A simple ACP client for one-shot prompts"

[lib]
path = "src/lib.rs"

[[bin]]
name = "yopo"
path = "src/main.rs"

[dependencies]
agent-client-protocol-core = { path = "../agent-client-protocol-core" }
agent-client-protocol-tokio = { path = "../agent-client-protocol-tokio" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
